--- a/src/app/features/auth/pages/forgotpassword/forgot-password-layout/forgot-password-layout.html
+++ b/src/app/features/auth/pages/forgotpassword/forgot-password-layout/forgot-password-layout.html
@@ -5,15 +5,15 @@
     }
     @case('verify') {
       <app-verifycode 
-        [email]="email" 
+        [email]="email()" 
         (next)="goToSetPassword($event)" 
         (back)="goToEmail()">
       </app-verifycode>
     }
     @case('password') {
       <app-setpassword 
-        [email]="email" 
-        (back)="goToVerification(email)">
+        [email]="email()" 
+        (back)="goToVerification(email())">
       </app-setpassword>
     }
   }
