--- a/src/app/features/dashboard/dashboard-layout/dashboard-layout.html
+++ b/src/app/features/dashboard/dashboard-layout/dashboard-layout.html
@@ -1,2 +1,2 @@
 
-    <p *ngIf="user">Welcome, {{ user.firstName }} {{ user.lastName }}</p>
+    <p *ngIf="user">Welcome, {{ user().firstName }} {{ user().lastName }}</p>
