--- a/src/app/features/dashbourd/pages/diplomas-page/exams/exam-card/exam-card.html
+++ b/src/app/features/dashbourd/pages/diplomas-page/exams/exam-card/exam-card.html
@@ -3,7 +3,7 @@
 >
   <div>
     <h3 class="text-blue-700 font-semibold">{{ title }}</h3>
-    <p class="text-gray-500 text-sm">{{ questions }} Questions</p>
+    <p class="text-gray-500 text-sm">{{ numberOfQuestions }} Questions</p>
   </div>
 
   <div class="flex items-center gap-1 text-gray-500 text-sm">
