--- a/src/app/features/dashbourd/pages/diplomas-page/exams/exams.html
+++ b/src/app/features/dashbourd/pages/diplomas-page/exams/exams.html
@@ -1,16 +1,10 @@
-<div class="p-6">
-  <h2 class="text-2xl font-semibold text-blue-700 mb-6">Exams</h2>
+<app-exam-card (click)="goToQuestions(exam._id)"
+  *ngFor="let exam of exams$ | async" 
+  [title]="exam.title"
+  [numberOfQuestions]="exam.numberOfQuestions"
+  [duration]="exam.duration"
+></app-exam-card>
 
-  <div class="flex flex-col gap-4" *ngIf="exams.length > 0">
-    <app-exam-card
-      *ngFor="let exam of exams"
-      [title]="exam.title"
-      [questions]="exam.numberOfQuestions"
-      [duration]="exam.duration"
-    ></app-exam-card>
-  </div>
-
-  <p class="text-center text-gray-400 text-sm mt-6" *ngIf="exams.length === 0">
-    No exams found.
-  </p>
-</div>
+<p *ngIf="(exams$ | async)?.length === 0" class="text-center text-gray-400 text-sm mt-6">
+  No exams found.
+</p>
